jewel migration (#83)
* jewel migration

* ui tests